# rust

./: CHANGELOG.md  Cargo.toml  README.md
examples/: test_env_var.rs
src/: gen.rs  generator.rs  id.rs  identifier.rs  lib.rs  test_cases.rs
src/generator/: counter_mode.rs  doc_global_gen.md  global_gen.rs  node_spec.rs
