[package]
name = "scru64"
version = "0.2.1"
authors = ["LiosK <contact@mail.liosk.net>"]
license = "Apache-2.0"
edition = "2021"
description = "SCRU64: Sortable, Clock-based, Realm-specifically Unique identifier"
repository = "https://github.com/scru64/rust"

[features]
default = ["std"]
std = ["fstr/std", "once_cell"]

[dependencies]
fstr = { version = "0.2", default-features = false }
once_cell = { version = "1.17", optional = true }
pcg32 = { version = "0.1", default-features = false }
serde = { version = "1.0", default-features = false, optional = true }
tokio = { version = "1.27", features = ["time"], optional = true }

[dev-dependencies]
serde_test = { version = "1.0", default-features = false }

[package.metadata.docs.rs]
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
