[package]
name = "scru64"
version = "1.0.3"
authors = ["LiosK <contact@mail.liosk.net>"]
license = "Apache-2.0"
edition = "2021"
description = "SCRU64: Sortable, Clock-based, Realm-specifically Unique identifier"
repository = "https://github.com/scru64/rust"

[features]
default = ["global_gen"]
std = ["fstr/std"]
global_gen = ["std"]
serde = ["dep:serde"]
tokio = ["dep:tokio"]
unstable = []

[dependencies]
fstr = { version = "0.2", default-features = false }
serde = { version = "1.0", default-features = false, optional = true }
tokio = { version = "1.27", features = ["time"], optional = true }

[dev-dependencies]
serde_test = { version = "1.0", default-features = false }
tokio = { version = "1.27", features = ["rt", "macros"] }

[package.metadata.docs.rs]
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
